external-crates/move/crates/move-compiler/tests/move_check/parser/spec_parsing_inside_fun.exp
warning[W09002]: unused variable
  ┌─ tests/move_check/parser/spec_parsing_inside_fun.move:2:22
  │
2 │     fun specs_in_fun(x: u64, n: u64) {
  │                      ^ Unused parameter 'x'. Consider removing or prefixing with an underscore: '_x'
  │
  = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning[W00001]: DEPRECATED. will be removed
  ┌─ tests/move_check/parser/spec_parsing_inside_fun.move:4:9
  │  
4 │ ╭         spec {
5 │ │             assume x > 42;
6 │ │         };
  │ ╰─────────^ Specification blocks are deprecated and are no longer used

warning[W00001]: DEPRECATED. will be removed
  ┌─ tests/move_check/parser/spec_parsing_inside_fun.move:9:17
  │
9 │         while ({spec {assert x < 42;}; n < 64}) {
  │                 ^^^^^^^^^^^^^^^^^^^^^ Specification blocks are deprecated and are no longer used

warning[W00001]: DEPRECATED. will be removed
   ┌─ tests/move_check/parser/spec_parsing_inside_fun.move:10:13
   │  
10 │ ╭             spec {
11 │ │                 assert x > 42;
12 │ │                 assert 0 < x;
13 │ │             };
   │ ╰─────────────^ Specification blocks are deprecated and are no longer used

warning[W00001]: DEPRECATED. will be removed
   ┌─ tests/move_check/parser/spec_parsing_inside_fun.move:18:9
   │  
18 │ ╭         spec {
19 │ │             assert x > 42;
20 │ │         };
   │ ╰─────────^ Specification blocks are deprecated and are no longer used

error[E01002]: unexpected token
   ┌─ tests/move_check/parser/spec_parsing_inside_fun.move:20:10
   │
20 │         };
   │          ^
   │          │
   │          Unexpected ';'
   │          Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

warning[W00001]: DEPRECATED. will be removed
   ┌─ tests/move_check/parser/spec_parsing_inside_fun.move:24:13
   │  
24 │ ╭             spec {
25 │ │                 assert x > 42;
26 │ │                 assert 0 < x;
27 │ │             };
   │ ╰─────────────^ Specification blocks are deprecated and are no longer used

error[E01002]: unexpected token
   ┌─ tests/move_check/parser/spec_parsing_inside_fun.move:27:14
   │
27 │             };
   │              ^
   │              │
   │              Unexpected ';'
   │              Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

warning[W00001]: DEPRECATED. will be removed
   ┌─ tests/move_check/parser/spec_parsing_inside_fun.move:32:9
   │
32 │         spec {} + 1;
   │         ^^^^^^^ Specification blocks are deprecated and are no longer used

error[E01002]: unexpected token
   ┌─ tests/move_check/parser/spec_parsing_inside_fun.move:32:17
   │
32 │         spec {} + 1;
   │                 ^
   │                 │
   │                 Unexpected '+'
   │                 Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

warning[W00001]: DEPRECATED. will be removed
   ┌─ tests/move_check/parser/spec_parsing_inside_fun.move:33:9
   │
33 │         spec {} && spec {};
   │         ^^^^^^^ Specification blocks are deprecated and are no longer used

error[E01002]: unexpected token
   ┌─ tests/move_check/parser/spec_parsing_inside_fun.move:33:17
   │
33 │         spec {} && spec {};
   │                 ^^
   │                 │
   │                 Unexpected '&&'
   │                 Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

warning[W00001]: DEPRECATED. will be removed
   ┌─ tests/move_check/parser/spec_parsing_inside_fun.move:33:20
   │
33 │         spec {} && spec {};
   │                    ^^^^^^^ Specification blocks are deprecated and are no longer used

error[E01002]: unexpected token
   ┌─ tests/move_check/parser/spec_parsing_inside_fun.move:33:27
   │
33 │         spec {} && spec {};
   │                           ^
   │                           │
   │                           Unexpected ';'
   │                           Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

warning[W00001]: DEPRECATED. will be removed
   ┌─ tests/move_check/parser/spec_parsing_inside_fun.move:34:14
   │
34 │         &mut spec {};
   │              ^^^^^^^ Specification blocks are deprecated and are no longer used

error[E01002]: unexpected token
   ┌─ tests/move_check/parser/spec_parsing_inside_fun.move:34:21
   │
34 │         &mut spec {};
   │                     ^
   │                     │
   │                     Unexpected ';'
   │                     Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

